Removed the correct answers

--- a/africa/africa.html
+++ b/africa/africa.html
@@ -175,7 +175,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q1" value="Swahili Coast" id="q12"></div>
-                            <div><label for="q12">Swahili Coast (Correct Answer)</label></div>
+                            <div><label for="q12">Swahili Coast</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q1" value="Ethiopian Highlands" id="q13"></div>
@@ -196,7 +196,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q2" value="Lions, leopards, rhinoceroses, elephants, and Cape buffaloes" id="q22"></div>
-                            <div><label for="q22">Lions, leopards, rhinoceroses, elephants, and Cape buffaloes (Correct Answer)</label></div>
+                            <div><label for="q22">Lions, leopards, rhinoceroses, elephants, and Cape buffaloes</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q2" value="Hyenas, wild dogs, gazelles, zebras, and antelope" id="q23"></div>
@@ -217,7 +217,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q3" value="Acting as one of the largest carbon sinks" id="q32"></div>
-                            <div><label for="q32">Acting as one of the largest carbon sinks (Correct Answer)</label></div>
+                            <div><label for="q32">Acting as one of the largest carbon sinks</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q3" value="Being the driest part of the continent" id="q33"></div>
@@ -234,7 +234,7 @@
                         <p class="score" id="q4Score"></p>
                         <div>
                             <div><input type="radio" name="q4" value="Sahara Desert" id="q41"></div>
-                            <div><label for="q41">Sahara Desert (Correct Answer)</label></div>
+                            <div><label for="q41">Sahara Desert</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q4" value="Namib Desert" id="q42"></div>
@@ -259,7 +259,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q5" value="Massive migrations of land animals" id="q52"></div>
-                            <div><label for="q52">Massive migrations of land animals (Correct Answer)</label></div>
+                            <div><label for="q52">Massive migrations of land animals</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q5" value="High annual rainfall" id="q53"></div>
@@ -280,7 +280,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q6" value="It can store large amounts of water" id="q62"></div>
-                            <div><label for="q62">It can store large amounts of water (Correct Answer)</label></div>
+                            <div><label for="q62">It can store large amounts of water</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q6" value="It is a common tree in rainforests" id="q63"></div>
