--- a/asia/asia.html
+++ b/asia/asia.html
@@ -154,7 +154,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q1" value="russia" id="q13"></div>
-                            <div><label for="q13">Russia (Correct Answer)</label></div>
+                            <div><label for="q13">Russia</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q1" value="kazakhstan" id="q14"></div>
@@ -167,7 +167,7 @@
                         <p class="score" id="q2Score"></p>
                         <div>
                             <div><input type="radio" name="q2" value="himalayas" id="q21"></div>
-                            <div><label for="q21">Himalayas (Correct Answer)</label></div>
+                            <div><label for="q21">Himalayas</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q2" value="ural" id="q22"></div>
@@ -192,7 +192,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q3" value="japan" id="q32"></div>
-                            <div><label for="q32">Japan (Correct Answer)</label></div>
+                            <div><label for="q32">Japan</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q3" value="south_korea" id="q33"></div>
@@ -221,7 +221,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q4" value="india" id="q44"></div>
-                            <div><label for="q44">India (Correct Answer)</label></div>
+                            <div><label for="q44">India</label></div>
                         </div>
                     </div>
         
@@ -239,7 +239,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q5" value="baikal" id="q53"></div>
-                            <div><label for="q53">Lake Baikal (Correct Answer)</label></div>
+                            <div><label for="q53">Lake Baikal</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q5" value="lake_chad" id="q54"></div>
@@ -253,7 +253,7 @@
 
                         <div>
                             <div><input type="radio" name="q6" value="himalayas" id="q61"></div>
-                            <div><label for="q61">Himalayas (Correct Answer)</label></div>
+                            <div><label for="q61">Himalayas</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q6" value="tundra" id="q62"></div>
