--- a/northAmerica/northAmerica.html
+++ b/northAmerica/northAmerica.html
@@ -164,7 +164,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q1" value="rockies" id="q12"></div>
-                            <div><label for="q12">The Rockies (Correct Answer)</label></div>
+                            <div><label for="q12">The Rockies</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q1" value="appalachians" id="q13"></div>
@@ -181,7 +181,7 @@
                         <p class="score" id="q2Score"></p>
                         <div>
                             <div><input type="radio" name="q2" value="great_lakes" id="q21"></div>
-                            <div><label for="q21">The Great Lakes (Correct Answer)</label></div>
+                            <div><label for="q21">The Great Lakes</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q2" value="amazon_river" id="q22"></div>
@@ -214,7 +214,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q3" value="water_availability" id="q34"></div>
-                            <div><label for="q34">Water Availability (Correct Answer)</label></div>
+                            <div><label for="q34">Water Availability</label></div>
                         </div>
                     </div>
         
@@ -235,7 +235,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q4" value="low_rainfall" id="q44"></div>
-                            <div><label for="q44">Low Rainfall (Correct Answer)</label></div>
+                            <div><label for="q44">Low Rainfall</label></div>
                         </div>
                     </div>
         
@@ -252,7 +252,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q5" value="japan" id="q53"></div>
-                            <div><label for="q53">Japan (Correct Answer)</label></div>
+                            <div><label for="q53">Japan</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q5" value="thailand" id="q54"></div>
@@ -265,7 +265,7 @@
                         <p class="score" id="q6Score"></p>
                         <div>
                             <div><input type="radio" name="q6" value="argentina" id="q61"></div>
-                            <div><label for="q61">Argentina (Correct Answer)</label></div>
+                            <div><label for="q61">Argentina</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q6" value="brazil" id="q62"></div>
