--- a/oceania/oceania.html
+++ b/oceania/oceania.html
@@ -124,7 +124,7 @@
                         <p class="score" id="q1Score"></p>
                         <div>
                             <div><input type="radio" name="q1" value="australia" id="q11"></div>
-                            <div><label for="q11">Australia (Correct Answer)</label></div>
+                            <div><label for="q11">Australia</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q1" value="papua_new_guinea" id="q12"></div>
@@ -149,7 +149,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q2" value="wellington" id="q22"></div>
-                            <div><label for="q22">Wellington (Correct Answer)</label></div>
+                            <div><label for="q22">Wellington</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q2" value="christchurch" id="q23"></div>
@@ -170,7 +170,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q3" value="opera_house" id="q32"></div>
-                            <div><label for="q32">Sydney Opera House (Correct Answer)</label></div>
+                            <div><label for="q32">Sydney Opera House</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q3" value="statue_of_liberty" id="q33"></div>
@@ -187,7 +187,7 @@
                         <p class="score" id="q4Score"></p>
                         <div>
                             <div><input type="radio" name="q4" value="vanuatu" id="q41"></div>
-                            <div><label for="q41">Vanuatu (Correct Answer)</label></div>
+                            <div><label for="q41">Vanuatu</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q4" value="fiji" id="q42"></div>
@@ -220,7 +220,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q5" value="indonesia" id="q54"></div>
-                            <div><label for="q54">Indonesia (Correct Answer)</label></div>
+                            <div><label for="q54">Indonesia</label></div>
                         </div>
                     </div>
         
@@ -237,7 +237,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q6" value="pacificOcean" id="q63"></div>
-                            <div><label for="q63">Pacific Ocean (Correct Answer)</label></div>
+                            <div><label for="q63">Pacific Ocean</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q6" value="arcticOcean" id="q64"></div>
