--- a/southAmerica/southAmerica.html
+++ b/southAmerica/southAmerica.html
@@ -123,7 +123,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q1" value="brazil" id="q12"></div>
-                            <div><label for="q12">Brazil (Correct Answer)</label></div>
+                            <div><label for="q12">Brazil</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q1" value="chile" id="q13"></div>
@@ -148,7 +148,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q2" value="peru" id="q23"></div>
-                            <div><label for="q23">Peru (Correct Answer)</label></div>
+                            <div><label for="q23">Peru</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q2" value="colombia" id="q24"></div>
@@ -161,7 +161,7 @@
                         <p class="score" id="q3Score"></p>
                         <div>
                             <div><input type="radio" name="q3" value="argentina" id="q31"></div>
-                            <div><label for="q31">Argentina (Correct Answer)</label></div>
+                            <div><label for="q31">Argentina</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q3" value="brazil" id="q32"></div>
@@ -190,7 +190,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q4" value="brazil" id="q43"></div>
-                            <div><label for="q43">Brazil (Correct Answer)</label></div>
+                            <div><label for="q43">Brazil</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q4" value="venezuela" id="q44"></div>
@@ -203,7 +203,7 @@
                         <p class="score" id="q5Score"></p>
                         <div>
                             <div><input type="radio" name="q5" value="amazon" id="q51"></div>
-                            <div><label for="q51">Amazon River (Correct Answer)</label></div>
+                            <div><label for="q51">Amazon River</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q5" value="nile" id="q52"></div>
@@ -228,7 +228,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q6" value="amazon" id="q62"></div>
-                            <div><label for="q62">Amazon Rainforest (Correct Answer)</label></div>
+                            <div><label for="q62">Amazon Rainforest</label></div>
                         </div>
                         <div>
                             <div><input type="radio" name="q6" value="andes" id="q63"></div>
