Changed styling and formatting

--- a/africa/africa.html
+++ b/africa/africa.html
@@ -115,7 +115,7 @@
                 }
             </script>
         </section>
-        <section id="ecology">
+        <section id="ecology" class="ecology">
             <h2>Ecology</h2>
                 <h3>Biodiversity</h3>
                     <p>The continent of Africa is renowed for its flourshing biodiversity. 
@@ -163,8 +163,9 @@
         </section>
 
         <div class="quizContainer">
-            <p id="afScore"></p>
             <form id="quizAF">
+                <h2>Africa Knowledge Check</h2>
+                <p id="afScore"></p>
                 <div class="quiz">
                     <div class="question" id="question 1">
                         <p class="questionTitle">Question 1: Which of the following regions in Africa is known for its coral reefs and mangrove forests?</p>
