--- a/europe/europe.html
+++ b/europe/europe.html
@@ -40,7 +40,7 @@
             <div class="region-button" style="top: 85%; left: 45%;" onclick="showDetails('alpine')">
                 Alpine Mountains
             </div>
-        </div>
+        </section>
         <div id="uplands" class="details">
             <h2>Western Uplands</h2>
             <p>The Western Uplands, also called the Northern Highlands, stretch across Scandinavia, Iceland, Scotland, Ireland, the Brittany region of France, Spain, and Portugal. These uplands are characterized by ancient, hard rock shaped by glaciation. The retreat of glaciers has left features such as marshlands, lakes, and dramatic fjords—long, narrow sea inlets surrounded by high cliffs. Fjords are particularly prominent in Iceland and Scandinavia.</p>
@@ -115,13 +115,12 @@
                         land use remain significant threats to Europe's habitats, making continued 
                         environmental protection and sustainable practices critical for preserving the 
                         continent's unique ecological heritage.</p>
-        
         </section>
 
-
         <div class="quizContainer">
-            <p id="euScore"></p>
             <form id="quizEU">
+                <h2>Europe Knowledge Check</h2>
+                <p id="euScore"></p>
                 <div class="quiz">
                     <div class="question" id="question1">
                         <p class="questionTitle">Question 1: What is a key characteristic of many European cultural groups?</p>
