--- a/home.html
+++ b/home.html
@@ -28,6 +28,6 @@
         <p>Welcome to the Continental Breakfast homepage. Explore the continents through the navigation menu above.</p>
     </div>
 
-    <script src="../home.js"></script>
+    <script src="home.js"></script>
 </body>
 </html>
