--- a/northAmerica/northAmerica.html
+++ b/northAmerica/northAmerica.html
@@ -110,7 +110,7 @@
                 }
             </script>
         </section>
-        <section>
+        <section class="ecology">
             <h2>Biodiversity</h2>
                 <p>North America is a continent of striking ecological diversity, shaped by its vast 
                     range of climates and landscapes. From the frozen tundras of Canada and Alaska to 
@@ -152,8 +152,9 @@
             
         </section>
         <div class="quizContainer">
-            <p id="naScore"></p>
             <form id="quizNA">
+                <h2>North America Knowledge Check</h2>
+                <p id="naScore"></p>
                 <div class="quiz">
                     <div class="question" id="question1">
                         <p class="questionTitle">Question 1: Which mountain range stretches from British Columbia to New Mexico?</p>
