--- a/southAmerica/southAmerica.html
+++ b/southAmerica/southAmerica.html
@@ -73,7 +73,7 @@
                 }
             </script>
         </section>
-        <section id="ecology">
+        <section id="ecology" class="ecology">
             <h2>Biodiversity</h2>
                 <p>South America is one of the most ecologically diverse continents on Earth, 
                     renowned for its unparalleled biodiversity and unique ecosystems. The 
@@ -111,8 +111,9 @@
         
 
         <div class="quizContainer">
-            <p id="saScore"></p>
             <form id="quizSA">
+                <h2>South America Knowledge Check</h2>
+                <p id="saScore"></p>
                 <div class="quiz">
                     <div class="question" id="question 1">
                         <p class="questionTitle">Question 1: What is the largest country in South America by land area?</p>
@@ -123,11 +124,7 @@
                         </div>
                         <div>
                             <div><input type="radio" name="q1" value="brazil" id="q12"></div>
-<<<<<<< HEAD
                             <div><label for="q12">Brazil</label></div>
-=======
-                            <div><label for="q12">Brazil (Correct Answer)</label></div>
->>>>>>> d9b43dd7e05cb9f811d0f34e944cc4e8b810f39a
                         </div>
                         <div>
                             <div><input type="radio" name="q1" value="chile" id="q13"></div>
