--- a/antarctica/antarctica.html
+++ b/antarctica/antarctica.html
@@ -131,8 +131,9 @@
                         with this treaty is essential to keep safe this unique and critical region of the planet.</p>
         </section>
         <div class="quizContainer">
-            <p id="antScore"></p>
             <form id="quizANT">
+                <h2>Antarctica Knowledge Check</h2>
+                <p id="antScore"></p>
                 <div class="quiz">
                     <div class="question" id="question 1">
                         <p class="questionTitle">Question 1: Which of the following is true?</p>
