--- a/oceania/oceania.html
+++ b/oceania/oceania.html
@@ -79,7 +79,7 @@
                 }
             </script>
         </section>
-        <section id="ecology">
+        <section id="ecology" class="ecology">
             <h2>Biodiversity</h2>
                 <p>Australia is a land of extraordinary biodiversity, home to species and ecosystems 
                     found nowhere else on Earth. Its wildlife includes iconic marsupials like kangaroos, 
@@ -116,8 +116,9 @@
 
         </section>
         <div class="quizContainer">
-            <p id="ocScore"></p>
             <form id="quizOC">
+                <h2>Oceania Knowledge Check</h2>
+                <p id="ocScore"></p>
                 <div class="quiz">
                     <div class="question" id="question 1">
                         <p class="questionTitle">Question 1: Which country is the largest in Oceania by land area?</p>
