--- a/antartica/antartica.html
+++ b/antartica/antartica.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
 
-
-<body>
-    
-    <div id="culture">
+    <section id="culture">
         <h2>Antartica's Culture</h2>
         <p>Antarctica is a unique continent in that it does not have a native human population, and therefore has no associated cultural attributes.
         </p>
-    </div>
-</body>
-</html>
+    </section>
