--- a/home.html
+++ b/home.html
@@ -23,11 +23,82 @@
         </ul>
     </nav>
        
-    <div class="content">
-        <h1>Continental Breakfast</h1>
-        <p>Welcome to the Continental Breakfast homepage. Explore the continents through the navigation menu above.</p>
+    <div class="content" style="background-image: url('earth.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+        <div class="welcome" style="background-color: #2c3e50;">
+            <h1>Continental Breakfast</h1>
+            <h3>Welcome to the Continental Breakfast homepage! Explore the continents through the navigation menu above!</h3>
+            <h3>Below are some quick facts about the Earth:</h3>                   
+        </div>
+        <div class="earthTable">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Continent</th>
+                        <th>Population</th>
+                        <th>Year of Newest Country</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Asia</td>
+                        <td>4.7 billion</td>
+                        <td>2011 (South Sudan)</td>
+                    </tr>
+                    <tr>
+                        <td>Africa</td>
+                        <td>1.3 billion</td>
+                        <td>2011 (South Sudan)</td>
+                    </tr>
+                    <tr>
+                        <td>Europe</td>
+                        <td>748 million</td>
+                        <td>2008 (Kosovo)</td>
+                    </tr>
+                    <tr>
+                        <td>North America</td>
+                        <td>579 million</td>
+                        <td>1993 (Belize)</td>
+                    </tr>
+                    <tr>
+                        <td>South America</td>
+                        <td>430 million</td>
+                        <td>2002 (Guyana)</td>
+                    </tr>
+                    <tr>
+                        <td>Oceania</td>
+                        <td>42 million</td>
+                        <td>1975 (PNG - Papua New Guinea)</td>
+                    </tr>
+                    <tr>
+                        <td>Antarctica</td>
+                        <td>5,000</td>
+                        <td>None</td>
+                    </tr>
+                </tbody>
+            </table> 
+        </div>  
     </div>
 
     <script src="home.js"></script>
 </body>
+<footer>
+    <div class = "authors">
+        <p>Authors:</p>
+        <ul>
+            <li><a href="mailto:austinmedina@arizona.edu">Austin Medina</a></li>
+            <li><a href="mailto:mgcarlson@arizona.edu">Maddie Carlson</a></li>
+            <li><a href="mailto:ehysaj@arizona.edu">Enka Hysaj</a></li>
+            <li><a href="mailto:laureng5@arizona.edu">Lauren Goodrich</a></li>
+        </ul>
+    </div>
+    <div class="sources">
+        <p>Sources:</p>
+        <ul>
+            <li><a href="https://education.nationalgeographic.org/resource/Continent/" target="_blank">Geographic Information</a></li>
+            <li><a href="https://www.geographyrealm.com/continents/" target="_blank">Size and Population</a></li>
+            <li><a href="https://www.sciencedirect.com/topics/social-sciences/african-culture" target="_blank">Culture in Africa</a></li>
+            <li><a href="https://www.thesouthamericaspecialists.com/node/471" target="_blank">Culture in South America</a></li>
+        </ul>
+    </div>
+</footer>
 </html>
