added multimedia and logo

--- a/home.html
+++ b/home.html
@@ -77,6 +77,24 @@
                 </tbody>
             </table> 
         </div>  
+    
+    <div class="header">
+        <img src="logo.png" alt="Continental Breakfast Logo" class="logo">
+        <h1 class="title">Continental Breakfast</h1>
+    </div>    
+    
+    <div class="content">
+        <p>Welcome to the Continental Breakfast homepage. Explore the continents through the navigation menu above, or click play below to see a visual of how the continents separted from pangea to form the current seven that exist today.</p>
+        <div class="video-container">
+            <iframe 
+                id="multimedia"
+                src="https://www.youtube.com/embed/ALBUX31tW4M" 
+                title="Pangea Youtube Video" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+            </iframe>
+        </div>
     </div>
 
     <script src="home.js"></script>
